--- a/aboutme.html
+++ b/aboutme.html
@@ -8,10 +8,12 @@
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="all about me.html">about me</a>
-    <center><h1>This is my test Home Page!</h1><center>
-    <h2>sauce it up</h2>
-    <h3>do to much</h3>
-    <p>lil uzi sucks yuhhhhhhhhh!!!</p>
+    <center>
+      <h1>This is my all about me page.</h1>
+    <h2>hey my name is cameron vollmer</h2>
+    <h3>im a good guy that ejnoys long walks on the beach and in the park.</h3>
+    <p> i enjoy arts and crafts and the occasional round of golf.</p>
+    </center>
     <img src="images/home.jpg" height="250">
   </body>
 </html>
