--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
+    <a href="aboutme.html">All About Me</a>
     <center><h1>This is my test Home Page!</h1><center>
     <h2>sauce it up</h2>
     <h3>do to much</h3>
