--- a/aboutme.html
+++ b/aboutme.html
@@ -10,9 +10,9 @@
     <a href="all about me.html">about me</a>
     <center>
       <h1>This is my all about me page.</h1>
-    <h2>hey my name is cameron vollmer</h2>
-    <h3>im a good guy that ejnoys long walks on the beach and in the park.</h3>
-    <p> i enjoy arts and crafts and the occasional round of golf.</p>
+    <h2>Hey my name is cameron vollmer</h2>
+    <h3>Im a good guy that ejnoys long walks on the beach and a good meal.</h3>
+    <p> I enjoy arts and crafts and the occasional round of golf.</p>
     </center>
     <img src="images/home.jpg" height="250">
   </body>
