--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,7 @@
   <body>
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
-    <a href="all about me.html">about me</a>
+    <a href="aboutme.html">about me</a>
     <center>
       <h1>This is my all about me page.</h1>
     <h2>Hey my name is cameron vollmer</h2>
