--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <body>
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
-    <a href="aboutme.html">All About Me</a>
+    <a href="aboutme.html">about me</a>
     <center><h1>This is my test Home Page!</h1><center>
-    <h2>sauce it up</h2>
-    <h3>do to much</h3>
-    <p>lil uzi sucks yuhhhhhhhhh!!!</p>
-    <img src="images/home.jpg" height="250">
+    <h2>Cameron Scott Vollmer</h2>
+    <h3>Super star baller athlete</h3>
+    <p>Go REDS!!!!!!!!!!!!!!!!!!!!</p>
+    <img src="images/baller cam.JPG" height="400">
   </body>
 </html>
