center on about me

--- a/aboutme.html
+++ b/aboutme.html
@@ -11,9 +11,9 @@
     <center>
       <h1>This is my all about me page.</h1>
     <h2>Hey my name is cameron vollmer</h2>
-    <h3>Im a good guy that ejnoys long walks on the beach and a good meal.</h3>
-    <p> I enjoy arts and crafts and the occasional round of golf.</p>
+    <h2>Im a good guy that ejnoys long walks on the beach and a good meal.</h2>
+    <h2> I enjoy arts and crafts and the occasional round of golf.</h2>
+    <img src="images/vol.jpg" height="400"> 
     </center>
-    <img src="images/home.jpg" height="250">
   </body>
 </html>
