--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
   
 <tr><th>preview</th><th>Project Page Link</th></tr>
   
-<tr><td><img src="culture songs.PNG"></td><td><a target="_blank" href=https://scratch.mit.edu/projects/177076991/">Click here to try out my Scratch Project!</a></a></td></tr></
+<tr><td><img src="images/culture songs.PNG" height="200"></td><td><a target="_blank" href=https://scratch.mit.edu/projects/177076991/">Click here to try out my Scratch Project!</a></a></td></tr></
   
 <tr><td>2</td><td></td></tr>
   
