--- a/aboutme.html
+++ b/aboutme.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Lil UZI Stay being trash</title>
+    <link href="css.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <a href="index.html">Home</a>
@@ -12,7 +13,8 @@
       <h1>This is my all about me page.</h1>
     <h2>Hey my name is cameron vollmer</h2>
     <h2>Im a good guy that ejnoys long walks on the beach and a good meal.</h2>
-    <h2> I enjoy arts and crafts and the occasional round of golf.</h2>
+    <h2>I enjoy arts and crafts and the occasional round of golf.</h2>
+    <h2>--Its always savage szn here so enjoy an upisde down photo of me.--</h2>
     <img src="images/vol.jpg" height="400"> 
     </center>
   </body>
