--- a/portfolio.html
+++ b/portfolio.html
@@ -3,16 +3,14 @@
 	  <head>
 	    <meta charset="utf-8">
 	    <title>Portfolio</title>
+	    <link href="css.css" rel="stylesheet" type="text/css">
 	  </head>
 	  <body>
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">about me</a>
     <h1>This is my Portfolio Page!</h1>
-    <img src="images/portfolio.jpg" height="250">
-    <br>
     <a target="_blank" href="https://scratch.mit.edu">
-      <img src="images/scratchlogo.png" height="100">
     </a>
 </body>
 </html>
@@ -30,17 +28,16 @@
   
 <body>
   
-<table>
-  
+<center><table>  
 <tr><th>preview</th><th>Project Page Link</th></tr>
   
-<tr><td><img src="images/culture songs.PNG" height="200"></td><td><a target="_blank" href=https://scratch.mit.edu/projects/177076991/">Click here to try out my Scratch Project!</a></a></td></tr></
+<tr><td><img src="images/culture songs.PNG" height="200"></td><td><a target="_blank" href=https://scratch.mit.edu/projects/177076991/>Click here to try out my Scratch Project!</a></a></td></tr></
   
 <tr><td>2</td><td></td></tr>
   
 <tr><td>3</td><td></td></tr>
   
-</table>
+</table></center>
   
 </body>
   
